2009-11-07  James R. Van Zandt  <jrvz@comcast.net>

	* Makefile.in (VERSION): version 1.28

	* adjtimex.c (compare): Correctly apply +-500 ppm sanity check
	(Thanks to Jacques luder <j.luder@laposte.net>)

2009-04-18  James R. Van Zandt  <jrvz@comcast.net>

	* Makefile.in (VERSION): version 1.27.1
	Add rules for running autoconf, autoheader, and ./configure.
	(adjtimex): Depend on Makefile, so it's recompiled if the version
	number changes.
	(SRC): include config.h.in

	* adjtimex.c (struct rtc_time): Provide workaround if linux/rtc.h
	is missing.

	* configure.in: Check for linux/rtc.h, but not limits.h (no longer
	used), sys/time.h, or unistd.h (there is no workaround implemented).
	

2009-03-22  James R. Van Zandt  <jrvz@comcast.net>

	* Makefile.in (VERSION): version 1.27

	* adjtimex.c (review): HELP is an enum instead of a #define.

	* adjtimex.c: Add some training calls to gettimeofday, so
	following calls will be more accurate (thanks to Alain Guibert
	<alguibert+bts@free.fr>).

2009-03-14  James R. Van Zandt  <jrvz@comcast.net>

	* adjtimex.c (review): Compute CMOS frequency error in PPM of CMOS
	time (thanks to Alain Guibert <alguibert+bts@free.fr>).
	(review): Compute sys_time or the relative error between CMOS and
	sys_time in PPM of sys_time.

2009-03-14  Alain Guibert <alguibert@free.fr>

	* adjtimex.c (compare, log_times): The first call to
	gettimeofday() in a process takes longer than usual, and the
	timestamp taken is a little bit late (up to 200 microseconds).
	Let's consume this bad call, so that the important timestamps
	are all coherant at the top of accuracy.

	* (log_times): We don't need the kernel's internal timezone.
	Let's stop requesting it.

2009-03-11  James R. Van Zandt  <jrvz@comcast.net>

	* adjtimex.8: Document --force-adjust option.

	* adjtimex.c (longopt): --force-adjust overrides +-500 ppm sanity
	check.  verbose is now a counter, -V increases verbosity.  Require
	more than one option for several printouts.  Print